--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "lodash": "4.17.21",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-query": "3.38.0",
     "react-scripts": "4.0.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "2.1.2"
+    "semantic-ui-react": "1.3.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
